# xg-prototype

./: .gitignore  AGENTS.md  AI原生方案.md  CLAUDE.md  LEARN_AI.md  P0-功能设计-v2.md  P0-请销假配置管理-设计.md  P0-销假门禁自动化-设计.md  P0-需求评审报告.md  PRD-主动关怀工作台-修订建议稿.md  PRD-主动关怀工作台-重写版.md  PRD-主动关怀工作台.html  PRD-主动关怀工作台.md  PRD.md  RBAC改造落地方案-xg1.md  RBAC设计与金智对照.md  code-review-xg-prototype.md  findings.md  progress.md  task_plan.md  xg分支git合并流程.md  主动关怀任务去重与冷却落地方案.md  关怀工作台-测试用例与测试数据说明.md  关怀模块-领导汇报.html  关怀模块技术白皮书.html  危机求助快速通道-产品设计.md  危机求助快速通道-设计方案.md  吴恩达-Agent实战建议_副本.md  总体设计-v2.md  技术方案-详细版_副本.md  整体功能包括 web端.docx  金智对接边界-RBAC.md  项目开发约定.md  预警.md  高校学生工作服务系统 — 后端架构方案 v1.md
xg-ai/: .env.example  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
xg-ai/app/: __main__.py  config.py  main.py
xg-ai/app/agents/: __init__.py  admin_agent.py  base.py  student_agent.py  teacher_agent.py
xg-ai/app/api/: agent.py  ai_observer.py  asr.py  chat.py  deps.py  health.py  insight.py  kb.py  leave_policy.py  notification_config.py  polish.py  role_config.py  task_recommendation.py  tools.py  workflow_config.py  workstudy.py
xg-ai/app/asr/: xfyun_lfasr.py
xg-ai/app/core/: __init__.py  config.py  db.py  redis.py
xg-ai/app/data/: default_leave_config.yaml
xg-ai/app/graph/: __init__.py  approval_flow.py  checkpointer.py  rag_agent_flow.py  state.py
xg-ai/app/llm/: deepseek.py  fallback.py  openai_client.py  (+3 more)
xg-ai/eval/: insight_eval.py  rag_eval.py  rag_semantic.py
xg-ai/tests/: test_care_brief.py  test_chat_i18n.py  test_nl_to_time_patch.py  test_workstudy_tools.py
(+1406 files in other folders)
