[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xg-ai"
version = "0.1.0"
description = "AI Sidecar for Student Affairs Service System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pgvector>=0.3.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "openai>=1.30.0",
    "anthropic>=0.40.0",
    "tiktoken>=0.7.0",
    "prometheus-client>=0.20.0",
    "jsonschema>=4.0.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
xg-ai = "app.__main__:main"
